# katsdpk8spoc

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  README.rst  mypy.ini  requirements.txt  semver  setup.cfg  test-requirements.txt
chart/: notes.txt
chart/katsdpk8spoc/: Chart.yaml  values.yaml
chart/katsdpk8spoc/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/katsdpk8spoc/templates/tests/: test-connection.yaml
doc/: conf.py  index.rst  katsdpk8spoc.rst  modules.rst
src/katsdpk8spoc/: argotoken.py  controller.py  controller_server.py  index.html  sdpcontroller.py  workflow_controller.py
src/templates/: index.html
test/: example-config.yml  test_dummy.py
