[metadata]
name = katsdpk8spoc
description = Miscellaneous collection of Proof of Concept scripts for SDP on Kubernetes
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpk8spoc@ska.ac.za
url = https://github.com/ska-sa/katsdpk8spoc
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
