[metadata]
name = katsdpk8spoc
description = Miscellaneous collection of Proof of Concept scripts for SDP on Kubernetes
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpk8spoc@ska.ac.za
url = https://github.com/ska-sa/katsdpk8spoc
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    katversion
    aiohttp==3.7.2
    aiohttp-swagger3==0.5.0
    async-timeout==3.0.1
    attrs==20.3.0
    chardet==3.0.4
    contextvars==2.4
    fastjsonschema==2.14.5
    idna==2.10
    idna-ssl==1.1.0
    immutables==0.14
    multidict==5.0.2
    pkg-resources==0.0.0
    PyYAML==5.3.1
    strict-rfc3339==0.7
    typing-extensions==3.7.4.3
    yarl==1.6.3
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
